// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/LanguageSelector/Modal Should render correctly 1`] = `
.c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  position: fixed;
  background-color: rgba(0,0,0,0.8);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 310px;
  background-color: #fff;
  z-index: 2;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  border-radius: 10px;
  padding: 24px;
}

.c2 {
  width: 100%;
  position: relative;
  border-bottom: 1px solid #d9d9d9;
}

.c3 {
  font-size: 20px;
  margin-bottom: 8px;
}

.c4 {
  position: absolute;
  top: -16px;
  right: -16px;
  display: block;
  width: 25px;
  height: 25px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  cursor: pointer;
}

.c6 {
  padding-top: 16px;
}

.c7 {
  display: block;
  position: relative;
  width: 100%;
  margin-bottom: 16px;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 1px solid #d9d9d9;
  border-radius: 5px;
  padding: 8px;
}

.c9 {
  width: 29px;
  height: 22px;
  margin-right: 8px;
}

.c10 {
  display: block;
  position: absolute;
  top: 50%;
  right: 8px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  list-style-type: none;
  padding: 0;
  max-height: 0;
  background-color: #fff;
  overflow: hidden;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c11 li {
  opacity: 0;
  padding: 0 8px;
}

.c12 {
  font-size: 14px;
  padding: 8px;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  opacity: 1;
}

.c12:not(:last-child) {
  border-bottom: 1px solid #d9d9d9;
}

.c13 {
  font: 700 16px/16px 'Lato',sans-serif;
  text-align: center;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background-color: #992e24;
  border: none;
  border-radius: 5px;
  padding: 8px;
  cursor: pointer;
}

.c13:disabled {
  background: #fff;
  color: #ccc;
  border: 1px solid #d9d9d9;
  cursor: default;
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h2
        class="c3"
      >
        Selecione a sua linguagem
        :
      </h2>
      <button
        class="c4"
        type="button"
      >
        <svg
          class="c5"
          fill="none"
          focusable="false"
          height="25"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Close
          </title>
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <button
          class="c8"
          type="button"
        >
          <figure
            class="c9"
          >
            <img
              alt="Active locale"
              height="22"
              src="/img/pt-BR.jpg"
              title="Active locale"
              width="29"
            />
          </figure>
          pt-BR
          <span
            class="c10"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="currentColor"
              focusable="false"
              height="15"
              viewBox="0 0 320 512"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <figure
              class="c9"
            >
              <img
                height="22"
                src="/img/pt-BR.jpg"
                width="29"
              />
            </figure>
            pt-BR
          </li>
          <li
            class="c12"
          >
            <figure
              class="c9"
            >
              <img
                height="22"
                src="/img/en.jpg"
                width="29"
              />
            </figure>
            en
          </li>
        </ul>
      </div>
      <button
        class="c13"
        disabled=""
        type="button"
      >
        Alterar idioma
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/LanguageSelector/Modal Should render correctly in en 1`] = `
.c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  position: fixed;
  background-color: rgba(0,0,0,0.8);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 310px;
  background-color: #fff;
  z-index: 2;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  border-radius: 10px;
  padding: 24px;
}

.c2 {
  width: 100%;
  position: relative;
  border-bottom: 1px solid #d9d9d9;
}

.c3 {
  font-size: 20px;
  margin-bottom: 8px;
}

.c4 {
  position: absolute;
  top: -16px;
  right: -16px;
  display: block;
  width: 25px;
  height: 25px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  cursor: pointer;
}

.c6 {
  padding-top: 16px;
}

.c7 {
  display: block;
  position: relative;
  width: 100%;
  margin-bottom: 16px;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 1px solid #d9d9d9;
  border-radius: 5px;
  padding: 8px;
}

.c9 {
  width: 29px;
  height: 22px;
  margin-right: 8px;
}

.c10 {
  display: block;
  position: absolute;
  top: 50%;
  right: 8px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  list-style-type: none;
  padding: 0;
  max-height: 0;
  background-color: #fff;
  overflow: hidden;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c11 li {
  opacity: 0;
  padding: 0 8px;
}

.c12 {
  font-size: 14px;
  padding: 8px;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  opacity: 1;
}

.c12:not(:last-child) {
  border-bottom: 1px solid #d9d9d9;
}

.c13 {
  font: 700 16px/16px 'Lato',sans-serif;
  text-align: center;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background-color: #992e24;
  border: none;
  border-radius: 5px;
  padding: 8px;
  cursor: pointer;
}

.c13:disabled {
  background: #fff;
  color: #ccc;
  border: 1px solid #d9d9d9;
  cursor: default;
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h2
        class="c3"
      >
        Select your language
        :
      </h2>
      <button
        class="c4"
        type="button"
      >
        <svg
          class="c5"
          fill="none"
          focusable="false"
          height="25"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Close
          </title>
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <button
          class="c8"
          type="button"
        >
          <figure
            class="c9"
          >
            <img
              alt="Active locale"
              height="22"
              src="/img/en.jpg"
              title="Active locale"
              width="29"
            />
          </figure>
          en
          <span
            class="c10"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="currentColor"
              focusable="false"
              height="15"
              viewBox="0 0 320 512"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <figure
              class="c9"
            >
              <img
                height="22"
                src="/img/pt-BR.jpg"
                width="29"
              />
            </figure>
            pt-BR
          </li>
          <li
            class="c12"
          >
            <figure
              class="c9"
            >
              <img
                height="22"
                src="/img/en.jpg"
                width="29"
              />
            </figure>
            en
          </li>
        </ul>
      </div>
      <button
        class="c13"
        disabled=""
        type="button"
      >
        Change language
      </button>
    </div>
  </div>
</div>
`;
